<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="159dp"
    tools:context="com.example.mires.tests.FoActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewStartU"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:text="@string/startU"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="9dp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/died"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="233dp" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="325dp" />

        <TextView
            android:id="@+id/textViewThis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="75dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="75dp">

            <RadioButton
                android:id="@+id/radio_plane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick1"
                android:text="@string/Plane" />

            <RadioButton
                android:id="@+id/radio_ufo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick1"
                android:text="@string/UFO" />

            <RadioButton
                android:id="@+id/radio_ballon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick1"
                android:text="@string/ballon" />

            <RadioButton
                android:id="@+id/radio_ball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick1"
                android:text="@string/ball" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="130dp" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="233dp">

            <RadioButton
                android:id="@+id/radioYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick2"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick2"
                android:text="@string/no" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="325dp">

            <RadioButton
                android:id="@+id/radio_quickly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick3"
                android:text="@string/quickly" />

            <RadioButton
                android:id="@+id/radio_little"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick3"
                android:text="@string/little" />

            <RadioButton
                android:id="@+id/radio_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick3"
                android:text="@string/long1" />
        </RadioGroup>
    </GridLayout>

</android.support.constraint.ConstraintLayout>
